language/move-lang/tests/move_check/parser/struct_native_missing_semicolon.exp
error: 

   ┌── tests/move_check/parsing/struct_native_missing_semicolon.move:3:1 ───
   │
 3 │ }
   │ ^ Unrecognized Token: }
   ·
 3 │ }
   │ - Expected:  ";", "{",
   │

